--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,23 @@
   font-size: large;
 }
 
+.main-view {
+  margin: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.tags-container {
+  display: inline-block;
+  width: 350px;
+  margin: 0 20px;
+}
+
+.table-container {
+  display: inline-block;
+  width: 600px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
